# todoist

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.yaml  pyproject.toml  ruff.toml  todoist.db
alembic/: env.py
alembic/versions/: 30dcec81a52f_added_user_and_task_table.py  8a14c8d6b1c6_added_user_and_task_table.py
todoist/: __init__.py  main.py
todoist/config/: settings.py
todoist/database/: models.py  session.py
todoist/routers/: __init__.py  auth.py  task.py  user.py
todoist/schemas/: auth.py  task.py  user.py
todoist/services/: auth.py
